# src/routes.ts
@@ -10,6 +10,7 @@ import { apuestasRouter } from "./modules/apuestas/apuestas.routes.js";
 import { calculosRouter } from "./modules/calculos/calculos.routes.js";
 import { pagosRouter } from "./modules/pagos/pagos.routes.js";
 import { dashboardRouter } from "./modules/dashboard/dashboard.routes.js";
+import { ajustesBoteRouter } from "./modules/ajustes-bote/ajustes-bote.routes.js";
 
 
 export const router = Router();
@@ -25,3 +26,4 @@ router.use("/jornadas", apuestasRouter);
 router.use("/calculos", calculosRouter);
 router.use("/pagos", pagosRouter);
 router.use("/dashboard", dashboardRouter);
+router.use("/ajustes-bote", ajustesBoteRouter);
